name:                site
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/sodimm-me/site#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Borden
maintainer:          michael@ispabuse.org
copyright:           2017 sodimm.me
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
